Closed
Bug 1359404
Opened 8 years ago
Closed 6 years ago
HTMLEditor::IsEmptyNode() and HTMLEditor::IsEmptyNodeImpl() should return bool
Categories
(Core :: DOM: Editor, defect, P3)
Core
DOM: Editor
Tracking
()
RESOLVED
FIXED
mozilla75
| Tracking | Status | |
|---|---|---|
| firefox75 | --- | fixed |
People
(Reporter: masayuki, Assigned: m_kato)
References
Details
Attachments
(1 file, 1 obsolete file)
HTMLEditor::IsEmptyNode() and HTMLEditor::IsEmptyNodeImpl() returns nsresult. However, the error result isn't useful for callers since they return error only when some information of editor isn't available, e.g., selection controller isn't available.
So, just returning bool value is fine.
| Reporter | ||
Comment 1•8 years ago
|
||
Ah, and perhaps, IsEmptyNodeImpl() should return a struct which has mIsEmpty and mHasBRElement. Then, we can improve the complicated arguments.
Updated•8 years ago
|
status-firefox57:
affected → ---
| Assignee | ||
Updated•8 years ago
|
Priority: -- → P3
| Reporter | ||
Comment 2•8 years ago
|
||
| Reporter | ||
Comment 3•8 years ago
|
||
| Reporter | ||
Comment 4•8 years ago
|
||
| Comment hidden (mozreview-request) |
| Reporter | ||
Comment 6•8 years ago
|
||
Comment on attachment 8938000 [details]
Bug 1359404 - Redesign HTMLEditor::IsVisTextNode()
Oops, the bug# in the commit message is wrong.
Attachment #8938000 -
Attachment is obsolete: true
Attachment #8938000 -
Flags: review?(m_kato)
| Assignee | ||
Comment 7•6 years ago
|
||
IsEmptyNode won't return error if parameter is not null. So we shouldn't use
nserror for return value and use assertion to check parameter.
Updated•6 years ago
|
Assignee: nobody → m_kato
Status: NEW → ASSIGNED
Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/808290d9cd09
Make IsEmptyNode infaillible. r=masayuki
Comment 9•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox75:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in
before you can comment on or make changes to this bug.
Description
•