Bug 1359404 - Make IsEmptyNode infaillible. r=masayuki

IsEmptyNode won't return error if parameter is not null. So we shouldn't use
nserror for return value and use assertion to check parameter.

Differential Revision: https://phabricator.services.mozilla.com/D63124